# FacultyProjectsYear1

AlgoFlex/FordFulkerson/: CMakeLists.txt  main.cpp
AlgoFlex/Johnson/: CMakeLists.txt  in.txt  main.cpp
AlgoFlex/Kosaraju/: CMakeLists.txt  main.cpp
AlgoFlex/Sorting/: main.py
AlgoFlex/TopologicalSorting/: CMakeLists.txt  main.cpp
DataStructuresAndAlgorithms/Bag/: CMakeLists.txt  main.cpp
DataStructuresAndAlgorithms/Map/: CMakeLists.txt  main.cpp
DataStructuresAndAlgorithms/Matrix/: CMakeLists.txt  main.cpp
DataStructuresAndAlgorithms/OrderedMultimap/: CMakeLists.txt  main.cpp
DataStructuresAndAlgorithms/OrderedMultimap_BST/: CMakeLists.txt  main.cpp
DataStructuresAndAlgorithms/OrderedMultimap_BST/ProiectC++/: IteratorMDO.cpp  IteratorMDO.h  MDO.cpp  MDO.h
DataStructuresAndAlgorithms/OrderedMultimap_BST/Teste/: TestExtins.cpp  TestExtins.h  TestScurt.cpp  TestScurt.h
GraphAlgorithms/FordFulkerson/: CMakeLists.txt  domain.h  fordFulkerson.cpp  fordFulkerson.h  fromFileToAdjacencyList.cpp  fromFileToAdjacencyList.h  fromFileToAdjacencyMap.cpp  fromFileToAdjacencyMap.h  fromFileToAdjacencyPriorityQueue.cpp  fromFileToAdjacencyPriorityQueue.h  main.cpp
GraphAlgorithms/GraphColoring/: CMakeLists.txt  chromaticNumber.cpp  chromaticNumber.h  domain.h  fromFileToAdjacencyList.cpp  fromFileToAdjacencyList.h  fromFileToAdjacencySet.cpp  fromFileToAdjacencySet.h  graphColoring.cpp  graphColoring.h  graph_in.txt  graph_out.txt  main.cpp
GraphAlgorithms/IsolatedNodes_GraphIsRegular_DistanceMatrix_Connected/: CMakeLists.txt  adjacencyMatrix.cpp  adjacencyMatrix.h  checkIsolatedNodes.cpp  checkIsolatedNodes.h  graphRegular.cpp  graphRegular.h  main.cpp  warshallAlgoritm.cpp  warshallAlgoritm.h
OOP/ImmobileAdministrator/: CMakeLists.txt  CMakeSettings.json  main.c
OOP/ImmobileAdministrator/business/: service.c  service.h
OOP/ImmobileAdministrator/domain/: apartment.c  expense.c  valueObject.h
OOP/ImmobileAdministrator/persistence/: dynamicStaticVector.c  dynamicStaticVector.h  dynamicVector.c  dynamicVector.h  repository.c  repository.h
OOP/ImmobileAdministrator/presentation/: userInterface.c  userInterface.h
OOP/ImmobileAdministrator/test/: test.c  test.h
OOP/ImmobileAdministrator/validation/: validator.c  validator.h
(+304 files in other folders)
