cmake_minimum_required(VERSION 3.17)
project(OrderedMultimap_BST)

set(CMAKE_CXX_STANDARD 14)

add_executable(OrderedMultimap_BST main.cpp ProiectC++/IteratorMDO.cpp ProiectC++/IteratorMDO.h ProiectC++/MDO.cpp ProiectC++/MDO.h Teste/TestScurt.cpp Teste/TestScurt.h Teste/TestExtins.cpp Teste/TestExtins.h)